feature(paa): add authority support